--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.1.0",
-    "marked": "^0.8.1",
+    "bootstrap-vue": "^2.15.0",
+    "marked": "^0.8.2",
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.2.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
-    "sass": "^1.19.0",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "websocket-extensions": ">=0.1.4"
   },
   "browserslist": [
     "> 1%",
